# DBA-Tools-Cli

./: .gitignore  README.md  env.example  pyproject.toml
src/cli_python/: main_menu.py
src/dba_tools/: app.py
src/dba_tools/prompts/: awr_analysis_prompt.md
src/dba_tools/tui/: styles.tcss
src/dba_tools/tui/screens/: awr_analyzer.py  ssh_manager.py  todo_list.py  translator.py
